// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "Vector.proto";

option java_package = "org.sorapointa.proto";

message EvtGrapplingHookMove {
  Vector target_pos = 4;
  uint32 entity_id = 10;
  float speed = 2;
  float Unk3300_NDMHKNFMPCJ = 5;
  repeated uint32 animator_state_id_list = 11;
  bool Unk3300_BGOLPLHGGPO = 1;
  float Unk3300_MJAOALPCJML = 9;
  bool Unk3300_BKEELCGOLLN = 15;
  string override_collider = 3;
}
