// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "Vector.proto";

option csharp_namespace = "OldProtos";

message EvtAnimatorStateChangedInfo {
  int32 face_angle_compact = 14;
  uint32 to_state_hash = 5;
  uint32 normalized_time_compact = 9;
  uint32 layer = 2;
  Vector pos = 13;
  float fade_duration = 3;
  bool force_sync = 1;
  uint32 entity_id = 15;
  bool handle_animator_state_immediately = 7;
}
