// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "Vector.proto";

option csharp_namespace = "OldProtos";

message EvtFixedRushMove {
  uint32 entity_id = 15;
  float speed = 3;
  bool need_set_is_in_air = 7;
  repeated uint32 animator_state_id_list = 2;
  Vector target_pos = 9;
  bool check_animator_state_on_exit_only = 6;
  string override_collider = 13;
}
